--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,9 +6,142 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "media/favicon.png",
+      "src": "media/logo20.png",
       "type": "image/png",
       "sizes": "20x20"
+    },
+    {
+      "src": "media/logo29.png",
+      "type": "image/png",
+      "sizes": "29x29",
+      "purpose": "any "
+    },
+    {
+      "src": "media/logo36.png",
+      "type": "image/png",
+      "sizes": "36x36"
+    },
+    {
+      "src": "media/logo40.png",
+      "type": "image/png",
+      "sizes": "40x40"
+    },
+    {
+      "src": "media/logo48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "media/logo50.png",
+      "type": "image/png",
+      "sizes": "50x50"
+    },
+    {
+      "src": "media/logo57.png",
+      "type": "image/png",
+      "sizes": "57x57"
+    },
+    {
+      "src": "media/logo58.png",
+      "type": "image/png",
+      "sizes": "58x58"
+    },
+    {
+      "src": "media/logo60.png",
+      "type": "image/png",
+      "sizes": "60x60"
+    },
+    {
+      "src": "media/logo72.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "media/logo76.png",
+      "type": "image/png",
+      "sizes": "76x76"
+    },
+
+    {
+      "src": "media/logo80.png",
+      "type": "image/png",
+      "sizes": "80x80"
+    },
+
+    {
+      "src": "media/logo87.png",
+      "type": "image/png",
+      "sizes": "87x87"
+    },
+    {
+      "src": "media/logo96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "media/logo100.png",
+      "type": "image/png",
+      "sizes": "100x100"
+    },
+    {
+      "src": "media/logo114.png",
+      "type": "image/png",
+      "sizes": "114x114"
+    },
+    {
+      "src": "media/logo120.png",
+      "type": "image/png",
+      "sizes": "120x120"
+    },
+    {
+      "src": "media/logo144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "media/logo150.png",
+      "type": "image/png",
+      "sizes": "150x150"
+    },
+    {
+      "src": "media/logo152.png",
+      "type": "image/png",
+      "sizes": "152x152"
+    },
+    {
+      "src": "media/logo167.png",
+      "type": "image/png",
+      "sizes": "167x167"
+    },
+    {
+      "src": "media/logo171.png",
+      "type": "image/png",
+      "sizes": "171x171"
+    },
+    {
+      "src": "media/logo180.png",
+      "type": "image/png",
+      "sizes": "180x180"
+    },
+    {
+      "src": "media/logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "media/logo216.png",
+      "type": "image/png",
+      "sizes": "216x216"
+    },
+    {
+      "src": "media/logo228.png",
+      "type": "image/png",
+      "sizes": "228x228"
+    },
+    {
+      "src": "media/logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "lang": "es-ES",
