--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "no-restricted-syntax": "off",
     "consistent-return": "off",
     "no-debugger": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
